# rAI

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_STRATEGY.md  DEPLOY.md  Dockerfile  PRODUCT.md  README.md  analysis_dialog.py  analytics.py  analyzer.py  bot.py  config.py  docker-compose.yml  errors.py  formatting.py  i18n.py  main.py  onboarding.py  pose_analysis.py  prompts.py  pyproject.toml  remind.py  requirements-dev.txt  requirements.txt  stats_report.py  storage.py  test_gemini.py  video_intake.py  video_mute.py  wiki_context.py
.github/workflows/: ci.yml
CLAUDE/: SKILL.md  agent-readiness-behavior-ru.md  agent-readiness-behavior.md  agent-readiness-reference-ru.md  agent-readiness-reference.md  agent-readiness-ru.md  agent-readiness-workflow-ru.md  agent-readiness-workflow.md  agent-readiness.md  claude-thinking.md  codex-thinking.md  cursor-thinking.md
deploy/: install.sh  install_reminder_cron.sh  rallyai.service  remind.sh  stats.sh  update.sh
knowledge/: README.md  SCHEMA.md  home.md  index.md  log.md  open-questions.md  policy-modern-defaults.md
knowledge/.obsidian/: .gitignore  app.json  core-plugins.json
knowledge/raw/: README.md
knowledge/wiki/: feeltennis-map.md
tests/: test_analysis_dialog.py  test_analytics.py  test_analyzer_retry.py  test_bot.py  test_errors.py  test_formatting.py  test_i18n.py  test_onboarding.py  test_pose_analysis.py  test_prompts.py  test_prompts_context.py  test_prompts_player_context.py  test_storage.py  test_storage_profile.py  test_video_intake.py  test_video_mute.py  test_wiki_context.py
(+127 files in other folders)
