[project]
name = "rallyai"
version = "0.1.0"
description = "Telegram-бот для разбора техники тенниса по видео через Google Gemini"
requires-python = ">=3.9"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
